Massive cleanups